[tool.poetry]
name = "contract-master"
version = "0.1.0"
description = ""
authors = ["settler.cc"]
readme = "README.md"
packages = [{include = "contract_master"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
experimental-string-processing = true

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.10"
include = ["contract_master", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
