[tool.poetry]
name = "contract-master"
version = "0.1.0"
description = ""
authors = ["settler.cc"]
readme = "README.md"
packages = [{include = "contract_master"}]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^5.31.0"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.10"
include = ["contract_master", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
